app/assets/stylesheets/renalware/modules/medications.css.scss
.accordion dd > {

  a.drug-drug, li.drug-drug, tbody tr.drug-drug {
    background: #FFFFFF;
  }

  a.drug-esa, li.drug-esa, tbody tr.drug-esa{
    background: #FFFF99;
  }

  a.drug-immunosuppressant, li.drug-immunosuppressant, tbody tr.drug-immunosuppressant {
    background: #CCFFFF;
  }

  a.drug-antibiotic, li.drug-antibiotic, tbody tr.drug-antibiotic {
    background: #FFFFFF;
  }

  a.drug-peritonitis, li.drug-peritonitis, tbody tr.drug-peritonitis {
    background: #FFFFFF;
  }

}

.med-form.content ul.drug-results {
  height: 15em;
  padding: 1em;
  overflow-y: scroll;
  border: 1px solid #ccc;

  li.drug-select-link {
    cursor: pointer;
    text-decoration: underline;
  }
}

.find-drug-list ul.drug-results-admin {
  height: 20em;

  overflow-y: scroll;
  // border: 1px solid #ccc;
}

.drug-by-select {
  display: none;
}

.drug-results {
  display: none;
}

dl.medication-history {
  left: 0.9em;
}

